# CosmicInvaders

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  info.txt
assets/3d-models/: bullet.mtl
assets/shaders/: fragment-test.glsl  mesh-lit.frag  mesh-lit.vert  vertex-test.glsl
src/: CMakeLists.txt  demo.cpp  main.cpp
src/core/: CMakeLists.txt  audio-engine.cpp  audio-engine.h  fps-counter.cpp  fps-counter.h  gl-window.cpp  gl-window.h  input-manager.cpp  input-manager.h  model-store.cpp  model-store.h  settings.cpp  settings.h  timer.cpp  timer.h
src/ecs/: CMakeLists.txt  components.h  entities.cpp  entities.h  queries.cpp  queries.h  systems.cpp  systems.h
src/gameplay/: CMakeLists.txt  game.cpp  game.h  levels.h
src/renderer/: CMakeLists.txt  camera.cpp  camera.h  gl-call.h  immediate-renderer.cpp  immediate-renderer.h  lighting.h  material.h  mesh.cpp  mesh.h  model-store.cpp  model-store.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
src/ui/: CMakeLists.txt  game-over-screen.cpp  game-over-screen.h  hud.cpp  hud.h  main-menu.cpp  main-menu.h  pause-menu.cpp  pause-menu.h  settings-menu.cpp  settings-menu.h  ui-core.cpp  ui-core.h  victory-screen.cpp  victory-screen.h
